Axis z-index fix

--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@ body {font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #000; b
 #wrapper {width: 1000px; margin: 0 auto; position: relative;}
 #canvas1_container {float: left; position: relative;}
 #canvas1_container .axis {background: url(../img/axis.png); width: 133px; height: 137px; position: absolute; top: 47px; left: -15px;}
+#canvas1_container canvas {position: relative; z-index: 1;}
 #options {float: right; width: 389px;}
 .evaluate_container {text-align: center; height: 47px; padding: 10px 0 0 0;}
 #options input {vertical-align: middle;}
